Added  class="main-nav-link" to main-nav links

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               width="100"
           /></a>
           <ul class="main-nav">
-            <li><a href="pages/about.html">About</a></li>
-            <li><a href="#getting-started">Getting Started</a></li>
-            <li><a href="#plan-pricing">Plan & Pricing</a></li>
-            <li><a href="#contact-us">Contact Us</a></li>
+            <li><a href="pages/about.html" class="main-nav-link">About</a></li>
+            <li><a href="#getting-started" class="main-nav-link">Getting Started</a></li>
+            <li><a href="#plan-pricing" class="main-nav-link">Plan & Pricing</a></li>
+            <li><a href="#contact-us" class="main-nav-link">Contact Us</a></li>
           </ul>
         </nav>
 
