Shortened and simplified benefits

--- a/pages/career.html
+++ b/pages/career.html
@@ -36,13 +36,10 @@
                 <img src="../assets/tick.png" width="30px" />Skill Development
               </h3>
               <p>
-                Being a part of a startup like Auxi.my can offer opportunities
-                for skill development and enhancement. Whether you're working as
-                a developer, designer, marketer, or in any other role, you'll
-                have the chance to sharpen your existing skills and learn new
-                ones. Startups often require employees to wear multiple hats and
-                take on various responsibilities, allowing you to broaden your
-                skill set and become more versatile in your career.
+                Join Auxi.my, a startup that offers endless opportunities for
+                skill enhancement and growth. You'll have the chance to sharpen
+                your existing skills and learn new ones, becoming a versatile
+                and in-demand developer.
               </p>
             </li>
             <li>
@@ -51,14 +48,9 @@
                 Mindset
               </h3>
               <p>
-                Joining a startup encourages the development of an
-                entrepreneurial mindset. Startups typically operate in a
-                fast-paced, innovative environment, where employees are
-                encouraged to take initiative, think creatively, and find
-                solutions to challenges. This mindset can be highly valuable in
-                your career, whether you eventually start your own business or
-                work within an established organization that values
-                entrepreneurial thinking and problem-solving.
+                Embrace an entrepreneurial mindset by joining our fast-paced and
+                innovative startup. Take initiative, think creatively, and solve
+                exciting challenges that will set you apart in your career.
               </p>
             </li>
             <li>
@@ -67,14 +59,10 @@
                 Autonomy
               </h3>
               <p>
-                Startups often offer employees a higher level of responsibility
-                and autonomy compared to larger corporations. As a member of
-                Auxi.my, you may have the opportunity to take ownership of
-                projects, make important decisions, and contribute to the
-                overall direction of the platform. This increased responsibility
-                can help you develop leadership skills, gain valuable
-                experience, and build a track record of accomplishments that can
-                enhance your career prospects.
+                Unlike larger corporations, Auxi.my gives you a higher level of
+                responsibility and autonomy. Take ownership of projects, make
+                important decisions, and contribute to the platform's direction,
+                building leadership skills and valuable experience.
               </p>
             </li>
             <li>
@@ -83,13 +71,9 @@
                 Connections
               </h3>
               <p>
-                Joining a startup provides excellent networking opportunities.
-                As Auxi.my grows, you may interact with professionals,
-                investors, and industry experts who are involved or interested
-                in the startup ecosystem. These connections can be invaluable
-                for future career endeavors, whether it's collaborating on new
-                projects, seeking mentorship, or exploring other job
-                opportunities within the industry.
+                Connect with professionals, investors, and industry experts in
+                the startup ecosystem. These invaluable connections can lead to
+                collaborations, mentorship, and future career opportunities.
               </p>
             </li>
             <li>
@@ -98,13 +82,10 @@
                 Multiple Aspects of Business
               </h3>
               <p>
-                Startups often provide exposure to various aspects of business
-                operations. In a collaborative platform like Auxi.my, you may
-                have the chance to work closely with different teams, such as
-                product development, marketing, customer support, and finance.
-                This cross-functional experience can broaden your understanding
-                of how businesses operate, strengthen your knowledge in multiple
-                areas, and make you a well-rounded professional.
+                Experience various aspects of business operations at Auxi.my.
+                Work closely with different teams like product development,
+                marketing, and finance, expanding your knowledge and becoming a
+                well-rounded professional.
               </p>
             </li>
             <li>
@@ -113,13 +94,9 @@
                 Problem-Solving
               </h3>
               <p>
-                Startups are known for their emphasis on innovation and solving
-                real-world problems. By working at Auxi.my, you'll have the
-                opportunity to be part of a team that is developing solutions to
-                address the challenges faced by students and assignment helpers.
-                This focus on innovation and problem-solving can help you
-                develop a mindset that embraces change, seeks creative
-                solutions, and adapts to evolving industry landscapes.
+                Join a team that's developing innovative solutions to real-world
+                problems in the education sector. Embrace change, seek creative
+                solutions, and adapt to evolving industry landscapes.
               </p>
             </li>
             <li>
@@ -128,12 +105,10 @@
                 Growth and Advancement
               </h3>
               <p>
-                Joining a startup at an early stage like Auxi.my can provide
-                significant growth opportunities. As the platform expands, there
-                may be chances for career advancement, assuming more senior
-                roles, and taking on additional responsibilities. Startups often
-                promote internal talent, rewarding individuals who demonstrate
-                dedication, innovation, and a strong work ethic.
+                Joining Auxi.my at an early stage offers tremendous growth
+                opportunities. As the platform expands, assume more senior
+                roles, take on additional responsibilities, and be rewarded for
+                your dedication and innovation
               </p>
             </li>
             <li>
@@ -142,13 +117,10 @@
                 Experienced Entrepreneurs
               </h3>
               <p>
-                Working with experienced entrepreneurs and industry
-                professionals can be a tremendous learning opportunity. Startups
-                attract individuals who have a wealth of knowledge and expertise
-                in their respective fields. Being part of a startup like Auxi.my
-                allows you to learn from their experiences, gain insights into
-                entrepreneurship, and receive mentorship that can be valuable
-                for your career development.
+                Work alongside experienced entrepreneurs and industry
+                professionals. Learn from their wealth of knowledge and
+                expertise, gain insights into entrepreneurship, and receive
+                valuable mentorship for your career development.
               </p>
             </li>
             <li>
@@ -157,13 +129,10 @@
                 Contribution
               </h3>
               <p>
-                Startups often have a clear mission and vision, and being part
-                of a startup like Auxi.my means contributing to the platform's
-                overall impact. As a team member, you have the opportunity to
-                make a difference by helping students succeed academically and
-                supporting assignment helpers in sharing their knowledge and
-                skills. Contributing to a meaningful cause can provide a sense
-                of purpose and fulfillment in your career.
+                Contribute to Auxi.my's mission of helping students succeed
+                academically and supporting assignment helpers. Make a
+                difference by sharing your skills and knowledge, and experience
+                a sense of purpose and fulfillment in your career.
               </p>
             </li>
             <li>
@@ -171,12 +140,10 @@
                 <img src="../assets/tick.png" width="30px" />Dynamic Environment
               </h3>
               <p>
-                Startups are known for their dynamic and fast-paced
-                environments. Working at Auxi.my can expose you to the
-                challenges and opportunities associated with a rapidly evolving
-                industry. This exposure to a dynamic environment can help you
-                develop resilience, adaptability, and the ability to thrive in
-                an ever-changing professional landscape.
+                Thrive in a dynamic and fast-paced environment at Auxi.my.
+                Embrace the challenges and opportunities of a rapidly evolving
+                industry, developing resilience and adaptability for future
+                success.
               </p>
             </li>
           </ul>
