--- a/pages/team.html
+++ b/pages/team.html
@@ -131,7 +131,7 @@
               <div class="divider"></div>
               <div class="name">
                 <a href="https://github.com/lok2042" target="_blank"
-                  >Yap Joon Lok</a
+                  >J Lok</a
                 >
               </div>
               <div class="title">Founder</div>
